components/test-component3/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: test-app
    appstudio.openshift.io/component: test-component3
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltest-component3
  namespace: jvm-bld-test
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-test-component3
    weight: null
status: {}
